hydro_lang/tests/compile-fail/send_lifetime.stderr
error: lifetime may not live long enough
 --> tests/compile-fail/send_lifetime.rs:7:5
  |
6 | fn test<'a, 'b>(p1: &Process<'a, P1>, p2: &Process<'b, P2>) {
  |         --  -- lifetime `'b` defined here
  |         |
  |         lifetime `'a` defined here
7 |     p1.source_iter(q!(0..10))
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^ argument requires that `'b` must outlive `'a`
  |
  = help: consider adding the following bound: `'b: 'a`
  = note: requirement occurs because of the type `hydro_lang::prelude::Process<'_, P1>`, which makes the generic argument `'_` invariant
  = note: the struct `hydro_lang::prelude::Process<'a, ProcessTag>` is invariant over the parameter `'a`
  = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

error: lifetime may not live long enough
 --> tests/compile-fail/send_lifetime.rs:7:5
  |
6 |   fn test<'a, 'b>(p1: &Process<'a, P1>, p2: &Process<'b, P2>) {
  |           --  -- lifetime `'b` defined here
  |           |
  |           lifetime `'a` defined here
7 | /     p1.source_iter(q!(0..10))
8 | |         .send(p2, TCP.fail_stop().bincode())
  | |____________________________________________^ argument requires that `'a` must outlive `'b`
  |
  = help: consider adding the following bound: `'a: 'b`
  = note: requirement occurs because of the type `hydro_lang::prelude::Process<'_, P2>`, which makes the generic argument `'_` invariant
  = note: the struct `hydro_lang::prelude::Process<'a, ProcessTag>` is invariant over the parameter `'a`
  = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance

help: `'a` and `'b` must be the same: replace one with the other
